--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-    "name": "portfolio-site-igors-volohovs",
-    "version": "1.0.0",
-    "description": "Personal portfolio website for Igors Volohovs",
-    "main": "app.js",
-    "scripts": {
-      "start": "node app.js",
-      "dev": "nodemon app.js"
-    },
-    "keywords": [
-      "portfolio",
-      "cv",
-      "express",
-      "node"
-    ],
-    "author": "Igors Volohovs",
-    "license": "ISC",
-    "dependencies": {
-      "dotenv": "^16.4.5",
-      "express": "^4.19.2",
-      "express-basic-auth": "^1.2.1",
-      "multer": "^1.4.5-lts.1",
-      "pdfjs-dist": "^4.2.67"
-    },
-    "devDependencies": {
-      "nodemon": "^3.1.0"
-    }
+  "name": "portfolio-site",
+  "version": "1.0.0",
+  "description": "A simple portfolio website displaying a CV and allowing updates.",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "keywords": [
+    "portfolio",
+    "cv",
+    "express",
+    "node"
+  ],
+  "author": "Igor Svolokhov",
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
+    "pdfjs-dist": "^4.4.168"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
-  
+}
